--- a/templates/control_panel/site-title.html
+++ b/templates/control_panel/site-title.html
@@ -249,7 +249,7 @@
 											<div class="form-group">
 												<div class="input-group">
 													<div class="input-group-prepend">
-													<span class="input-group-text"
+													<span class="d-none d-sm-block input-group-text"
 														  id="inputGroupFileAddon01">Title Icon</span>
 													</div>
 													<div class="custom-file">
@@ -258,7 +258,7 @@
 															   aria-describedby="inputGroupFileAddon01"
 															   name="title-ico">
 														<label class="custom-file-label"
-															   for="inputGroupFile01">{{ title.title_icon.url }}</label>
+															   for="inputGroupFile01"></label>
 													</div>
 												</div>
 											</div>
