--- a/templates/control_panel/work-samples.html
+++ b/templates/control_panel/work-samples.html
@@ -219,15 +219,63 @@
 					</div>
 					{% elif message.type == "info" %}
 					<!-- Info Alert -->
-					<div class="alert alert-info alert-dismissible fade show">
-						<strong>{{ message.strong }}</strong> {{ message.body }}
-						<button type="button" class="close" data-dismiss="alert">&times;</button>
-					</div>
+						<div class="alert alert-info alert-dismissible fade show">
+							<strong>{{ message.strong }}</strong> {{ message.body }}
+							<button type="button" class="close" data-dismiss="alert">&times;</button>
+						</div>
 					{% endif %}
 				</div>
 				{% endfor %}
 				<!-- Page Heading -->
-				<h1 class="h3 mb-4 text-gray-800">Work Samples</h1>
+				<form method="POST">
+					{% csrf_token %}
+					<div class="card-deck mb-3">
+						<div class="card">
+							<div class="card-body d-sm-none ">
+								<button style="float: right;" class="btn btn-primary"
+										value="{{ slide.object.id }}" type="submit"
+										name="m-d"><a class="fa fa-angle-down"></a>
+								</button>
+								<button class="btn btn-primary"
+										value="{{ slide.object.id }}" type="submit"
+										name="m-u"><a class="fa fa-angle-up"></a>
+								</button>
+							</div>
+							<div class="card-body d-none d-sm-block">
+								<button style="float: right;" class="btn btn-primary"
+										value="{{ slide.object.id }}" type="submit"
+										name="m-d"><a class="fa fa-angle-right"></a>
+								</button>
+								<button class="btn btn-primary"
+										value="{{ slide.object.id }}" type="submit"
+										name="m-u"><a class="fa fa-angle-left"></a>
+								</button>
+							</div>
+							<img class="card-img" src="https://via.placeholder.com/64"
+								 alt="Card image cap">
+							<div class="card-body">
+								<h5 class="card-title">Card title</h5>
+								<p class="card-text">This is a longer card with supporting text below as a natural
+													 lead-in
+													 to additional content. This content is a little bit longer.</p>
+								<button style="float: right;" class="btn btn-primary"
+										value="{{ slide.object.id }}" type="submit"
+										name="save">Save
+								</button>
+								<button class="btn btn-danger"
+										value="{{ slide.object.id }}" type="submit"
+										name="save">Remove
+								</button>
+							</div>
+						</div>
+						<div class="card">
+							<button type="submit" style="width:100%; height:100%"
+									class="btn card-img-bottom btn-success btn-lg btn-block"
+									name="Add-new-video"><strong>+</strong>
+							</button>
+						</div>
+					</div>
+				</form>
 			</div>
 			<!-- /.container-fluid -->
 		</div>
