--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -58,7 +58,7 @@
 				<div class="menu-item">
 					<!-- Mobile menu toggle-->
 					<a class="navbar-toggle">
-						<div class="lines"> <span></span>
+						<div class="lines"><span></span>
 							<span></span>
 							<span></span>
 						</div>
@@ -69,7 +69,10 @@
 			<div id="navigation" class="active">
 				<!-- Navigation Menu-->
 				<ul style="text-align: right;" class="navigation-menu">
-					<li class="has-submenu"> <a href="javascript:void(0)">صفحات</a><span class="menu-arrow"></span>
+					{% if user.is_staff %}
+						<li class="last-elements"> <a href="/control_panel/">کنترل پنل</a>
+					{% endif %}
+					<li class="has-submenu"><a href="javascript:void(0)">صفحات</a><span class="menu-arrow"></span>
 						<ul class="submenu first-level">
 							<li><a href="/pricing/">قیمت ها</a>
 							</li>
@@ -81,7 +84,8 @@
 								<li><a href="/signup/">ثبت نام</a>
 								</li>
 							{% endif %}
-							<li class="has-submenu"><a href="javascript:void(0)">وبلاگ</a><span class="submenu-arrow"></span>
+							<li class="has-submenu"><a href="javascript:void(0)">وبلاگ</a><span
+									class="submenu-arrow"></span>
 								<ul class="submenu level-second">
 									<li><a href="/blog-grid/">شبکه وبلاگ</a>
 									</li>
@@ -93,7 +97,8 @@
 									</li>
 								</ul>
 							</li>
-							<li class="has-submenu"><a href="javascript:void(0)">پروژه ها</a><span class="submenu-arrow"></span>
+							<li class="has-submenu"><a href="javascript:void(0)">پروژه ها</a><span
+									class="submenu-arrow"></span>
 								<ul class="submenu">
 									<li><a href="/portfolio-grid/">شبکه پروژه ها</a>
 									</li>
@@ -109,13 +114,13 @@
 							{% endif %}
 						</ul>
 					</li>
-					<li class="last-elements"> <a href="/contact-us/">تماس با ما</a>
+					<li class="last-elements"><a href="/contact-us/">تماس با ما</a>
 					</li>
 					<li><a href="/our-services/">خدمات ما</a>
 					</li>
 					<li><a href="/about-us/">درباره ما</a>
 					</li>
-					<li class="has-submenu"> <a href="javascript:void(0)">خانه</a><span class="menu-arrow"></span>
+					<li class="has-submenu"><a href="javascript:void(0)">خانه</a><span class="menu-arrow"></span>
 						<ul class="submenu">
 							<li><a href="/">صفحه نخست 1</a>
 							</li>
@@ -210,29 +215,26 @@
 			</div>
 			{% for video in videos %}
 				<div class="row pt-80 px-custom">
-					{% if video.video_R_dir %}
-					{% else %}
-						<div class="col-xl-6 col-lg-6">
-							<div class="px-intro-block-img">
-								<img src="{{ video.cover_img.url }}" alt="img" class="img-fluid mx-auto d-block">
-								<a id="play-video" name="{{ video.id }}" class="video-play-button"
-								   href="{{ video.video_url }}">
-									<span></span>
-								</a>
-							</div>
+					<div class="col-xl-6 col-lg-6 {% if video.video_R_dir %} order-last {% endif %}">
+						<div class="px-intro-block-img">
+							<img src="{{ video.cover_img.url }}" alt="img" class="img-fluid mx-auto d-block">
+							<a id="play-video" name="{{ video.id }}" class="video-play-button"
+							   href="{{ video.video_url }}">
+								<span></span>
+							</a>
 						</div>
-						<div class="col-xl-6 col-lg-6 align-self-center">
-							<div class="px-into-block-content">
-								<h4 class="px-intro-block-title fw-600">{{ video.video_title }}</h4>
-								<p>
-									{% for sentences in video.video_description %}
-										{{ sentences }}
-										<br/>
-									{% endfor %}
-								</p>
-							</div>
+					</div>
+					<div class="col-xl-6 col-lg-6 align-self-center">
+						<div class="px-into-block-content">
+							<h4 class="px-intro-block-title fw-600">{{ video.video_title }}</h4>
+							<p>
+								{% for sentences in video.video_description %}
+									{{ sentences }}
+									<br/>
+								{% endfor %}
+							</p>
 						</div>
-					{% endif %}
+					</div>
 				</div>
 			{% endfor %}
 		</div>
