--- a/templates/control_panel/create-new-user.html
+++ b/templates/control_panel/create-new-user.html
@@ -242,22 +242,25 @@
 							<form method="POST">
 								{% csrf_token %}
 								<div class="form-row">
-									<div class="col">
+									<div class="col-lg-6 col-xl-6">
 										<div class="form-group"><label for="first_name"><strong>First
-											Name</strong></label><input class="form-control" type="text"
-																		name="first-name"></div>
+																								Name</strong></label><input
+												class="form-control" type="text"
+												name="first-name"></div>
 									</div>
-									<div class="col">
+									<div class="col-lg-6 col-xl-6">
 										<div class="form-group"><label for="last_name"><strong>Last
-											Name</strong></label><input class="form-control" type="text"
-																		name="last-name"></div>
+																							   Name</strong></label><input
+												class="form-control" type="text"
+												name="last-name"></div>
 									</div>
 								</div>
 								<div class="form-row">
 									<div class="col">
 										<div class="form-group"><label for="email"><strong>Email
-											Address</strong></label><input class="form-control" type="email"
-																		   name="email"></div>
+																						   Address</strong></label><input
+												class="form-control" type="email"
+												name="email"></div>
 									</div>
 								</div>
 								<div class="form-row">
@@ -277,40 +280,50 @@
 								<div class="form-row">
 									<div class="col">
 										<div class="form-group"><label for="username"><strong>Repeat
-											Password</strong></label><input class="form-control" type="password"
-																			name="re-password"></div>
+																							  Password</strong></label><input
+												class="form-control" type="password"
+												name="re-password"></div>
+									</div>
+								</div>
+								<div class="form-row">
+									<div class="col-lg-4 col-md-4">
+										<div class="form-group">
+											<div class="custom-control custom-checkbox my-2">
+												<input type="checkbox" class="custom-control-input" id="checkbox-1"
+													   name="is-active">
+												<label style="-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;"
+													   class="custom-control-label" for="checkbox-1">Active</label>
+											</div>
+										</div>
+									</div>
+									<div class="col-lg-4 col-md-4">
+										<div class="form-group">
+											<div class="custom-control custom-checkbox my-2">
+												<input type="checkbox" class="custom-control-input" id="checkbox-2"
+													   name="is-staff-status">
+												<label style="-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;"
+													   class="custom-control-label" for="checkbox-2">Staff
+																									 Status</label>
+											</div>
+										</div>
+									</div>
+									<div class="col-lg-4 col-md-4">
+										<div class="form-group">
+											<div class="custom-control custom-checkbox my-2">
+												<input type="checkbox" class="custom-control-input" id="checkbox-3"
+													   value="true" name="is-superuser-status">
+												<label style="-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;"
+													   class="custom-control-label" for="checkbox-3">Superuser
+																									 Status</label>
+											</div>
+										</div>
 									</div>
 								</div>
 								<div class="form-row">
 									<div class="col">
 										<div class="form-group">
-											<div class="custom-control custom-checkbox my-2">
-												<input type="checkbox" class="custom-control-input" id="checkbox-1" name="is-active">
-												<label style="-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;" class="custom-control-label" for="checkbox-1">Active</label>
-											</div>
-										</div>
-									</div>
-									<div class="col">
-										<div class="form-group">
-											<div class="custom-control custom-checkbox my-2">
-												<input type="checkbox" class="custom-control-input" id="checkbox-2" name="is-staff-status">
-												<label style="-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;" class="custom-control-label" for="checkbox-2">Staff Status</label>
-											</div>
-										</div>
-									</div>
-									<div class="col">
-										<div class="form-group">
-											<div class="custom-control custom-checkbox my-2">
-												<input type="checkbox" class="custom-control-input" id="checkbox-3" value="true" name="is-superuser-status">
-												<label style="-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;" class="custom-control-label" for="checkbox-3">Superuser Status</label>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="form-row">
-									<div class="col">
-										<div class="form-group">
-											<a href="/control_panel/auth/users/" class="btn btn-warning text-white" type="submit">Cancel</a>
+											<a href="/control_panel/auth/users/" class="btn btn-warning text-white"
+											   type="submit">Cancel</a>
 										</div>
 									</div>
 									<div class="col">
